--- a/3 Axis Printing/3 Axis Printing.csproj
+++ b/3 Axis Printing/3 Axis Printing.csproj
@@ -41,6 +41,21 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Thorlabs.MotionControl.DeviceManagerCLI">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\Thorlabs.MotionControl.DeviceManagerCLI.dll</HintPath>
+    </Reference>
+    <Reference Include="Thorlabs.MotionControl.GenericMotorCLI">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\Thorlabs.MotionControl.GenericMotorCLI.dll</HintPath>
+    </Reference>
+    <Reference Include="ThorLabs.MotionControl.KCube.DCServoCLI">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\ThorLabs.MotionControl.KCube.DCServoCLI.dll</HintPath>
+    </Reference>
+    <Reference Include="Thorlabs.MotionControl.Tools.Common">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\Thorlabs.MotionControl.Tools.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="Thorlabs.MotionControl.Tools.Logging">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\Thorlabs.MotionControl.Tools.Logging.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
