--- a/3 Axis Printing/3 Axis Printing.csproj
+++ b/3 Axis Printing/3 Axis Printing.csproj
@@ -14,7 +14,7 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x64</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -41,20 +41,25 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Thorlabs.MotionControl.DeviceManagerCLI">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\Thorlabs.MotionControl.DeviceManagerCLI.dll</HintPath>
+    <Reference Include="Thorlabs.MotionControl.DeviceManagerCLI, Version=1.14.45.22397, Culture=neutral, PublicKeyToken=c7ec6d6d6e2435e7, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files\Thorlabs\Kinesis\Thorlabs.MotionControl.DeviceManagerCLI.dll</HintPath>
     </Reference>
-    <Reference Include="Thorlabs.MotionControl.GenericMotorCLI">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\Thorlabs.MotionControl.GenericMotorCLI.dll</HintPath>
+    <Reference Include="Thorlabs.MotionControl.GenericMotorCLI, Version=1.14.45.22397, Culture=neutral, PublicKeyToken=c7ec6d6d6e2435e7, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files\Thorlabs\Kinesis\Thorlabs.MotionControl.GenericMotorCLI.dll</HintPath>
     </Reference>
-    <Reference Include="ThorLabs.MotionControl.KCube.DCServoCLI">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\ThorLabs.MotionControl.KCube.DCServoCLI.dll</HintPath>
+    <Reference Include="ThorLabs.MotionControl.KCube.DCServoCLI, Version=1.14.45.22397, Culture=neutral, PublicKeyToken=c7ec6d6d6e2435e7, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files\Thorlabs\Kinesis\ThorLabs.MotionControl.KCube.DCServoCLI.dll</HintPath>
     </Reference>
-    <Reference Include="Thorlabs.MotionControl.Tools.Common">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\Thorlabs.MotionControl.Tools.Common.dll</HintPath>
+    <Reference Include="Thorlabs.MotionControl.Tools.Common, Version=1.0.0.22397, Culture=neutral, PublicKeyToken=c7ec6d6d6e2435e7, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files\Thorlabs\Kinesis\Thorlabs.MotionControl.Tools.Common.dll</HintPath>
     </Reference>
-    <Reference Include="Thorlabs.MotionControl.Tools.Logging">
-      <HintPath>..\..\..\..\..\..\Program Files (x86)\Thorlabs\Kinesis\Thorlabs.MotionControl.Tools.Logging.dll</HintPath>
+    <Reference Include="Thorlabs.MotionControl.Tools.Logging, Version=1.0.0.22397, Culture=neutral, PublicKeyToken=c7ec6d6d6e2435e7, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files\Thorlabs\Kinesis\Thorlabs.MotionControl.Tools.Logging.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
